package Semester_2.Advance_Programming.Semester_2.TheoryAdvanceProgramming.Tugas_03;

public class FoodProduct extends Product {
    private String expiryDate;

    public FoodProduct(String productId, String name, double price, int stockQuantity, String expiryDate) {
        super(productId, name, price, stockQuantity);
        this.expiryDate = expiryDate;
    }

    @Override
    public double calculateDiscount() {
        if(getStockQuantity() > 10) {
            return getPrice() * 0.10;
        }
        return 0;
    }

    @Override
    public void getProductInfo() {
        super.getProductInfo();
        System.out.printf("| %-12s | %-25s | ", "Food", "Exp: " + expiryDate);
    }

    public String getExpiryDate() {
        return expiryDate;
    }

    public void setExpiryDate(String expiryDate) {
        this.expiryDate = expiryDate;
    }
}
